--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,10 @@
 {
-	"name": "redcatphp/ding",
+	"name": "redcatphp/strategy",
 	"type": "library",
-	"description": "Ding - Dependency Injection Made Universal",
-	"keywords": ["Ding","Dependency Injection","Configuration","Inversion of Control"],
+	"description": "Strategy - Dependency Injection Made Universal",
+	"keywords": ["Strategy","Dependency Injection","Configuration","Inversion of Control"],
 	"license": ["LGPL-3.0+","CC0-1.0"],
-	"homepage": "http://redcatphp.com/ding-dependency-injection",
+	"homepage": "http://redcatphp.com/strategy-dependency-injection",
 	"authors": [
 		{
 			"name": "Jo Surikat",
@@ -14,11 +14,11 @@
 		}
 	],
 	"require": {
-		"php": ">=5.4.0"
+		"php": ">=5.5.9"
 	},
 	"autoload": {
 		"psr-4":{
-			"RedCat\\Ding\\": ""
+			"RedCat\\Strategy\\": ""
 		}
 	},
 	"minimum-stability": "dev",
